# Audiobook-generator

./: .gitignore  README.md  components.json  electron-builder.yml  package-lock.json  package.json  tsconfig.base.json  tsconfig.electron.json  tsconfig.scripts.build.json  tsconfig.scripts.json
.github/workflows/: build-tauri.yml  build-win.yml
core/: epub-extractor.ts  eta-estimator.ts  external-modules.d.ts  index.ts  narration-plan.test.ts  narration-plan.ts  text-utils.ts  tts-engine.ts  types.ts
electron/: external-modules.d.ts  main.cjs  main.ts  preload.cjs  preload.ts  types.ts
electron/assets/: sidecar-manifest.json
electron/assets/voices/default/: README.md
electron/db/: repository.cjs  repository.ts  schema.sql
electron/ipc/: channels.cjs  channels.ts
electron/services/: audio-runner.cjs  audio-runner.ts  epub-extractor.cjs  epub-extractor.ts  eta-estimator.cjs  eta-estimator.ts  process-utils.cjs  process-utils.ts  queue-manager.cjs  queue-manager.ts  sidecar-bootstrap.cjs  sidecar-bootstrap.ts  text-utils.cjs  text-utils.ts
renderer/: next.config.mjs  tailwind.config.ts  tsconfig.json
renderer/app/: globals.css  layout.tsx
renderer/components/: dashboard.tsx
renderer/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  select.tsx
renderer/lib/: contracts.ts  tauri-api.ts
renderer/types/: global.d.ts
runtime/: ffmpeg-assets.json  voices.json
runtime/licenses/: VOICE_MODELS.md
runtime/requirements/: piper-tts-1.4.2.in
scripts/: benchmark-piper.ts  build-site.ts  build-updater-manifest.ts  collect-tauri-artifacts.ts  copy-electron-assets.ts  dev-desktop.cjs  dev-desktop.ts  generate-voice-demos.ts  prepare-ffmpeg.ts  prepare-runtime.ts  smoke-runtime.ts  verify-sidecar-manifest.cjs  verify-sidecar-manifest.ts
site/: downloads.json  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  commands.rs  epub.rs  language.rs  main.rs  models.rs  narration.rs  piper_http.rs  queue.rs  repository.rs  runtime.rs  text.rs  updates.rs
src-tauri/tests/fixtures/epub2-book/OEBPS/: chapter.xhtml  content.opf  toc.ncx
src-tauri/tests/fixtures/epub3-book/EPUB/: nav.xhtml  package.opf
src-tauri/tests/fixtures/epub3-book/EPUB/text/: chapter 2.xhtml  chapter-1.xhtml
